--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -1,9 +1,10 @@
+
 main{
     margin-top: 4vh;
 }
 .products{
-    min-height: 76vh;
-    background-color: rgb(190, 190, 190);
+    min-height: 56vh;
+    background-color:white;
     margin: 0% 5% 0% 5%;
 }
 .products h1{
@@ -21,13 +22,17 @@ main{
     position: relative;
     background-color: rgb(182, 182, 182);
     width: 22%;
-    border: 1px solid #888888;
+    border: 0.5px solid #888888;
     border-radius: 8px;
     overflow: hidden;
     height: 300px;
     margin-right: 11px;
     margin-left: 15px;
     margin-bottom: 25px;
+}
+.card:hover{
+    box-shadow: 2px 3px 14px gray;
+    transition: 0.5s;
 }
 .card .image{
     width: 100%;
@@ -41,16 +46,20 @@ main{
     padding: 6px;
 }
 .card-bottom {
-    width: 90%;
+    position: absolute;
     display: flex;
     justify-content: space-between;
-    position: absolute;
-    bottom: 8px;
     align-items: center;
+    width: 90%;
+    bottom: 8px;
 }
 .card-bottom button{
     background-color:#2AB050;
     border-radius: 2px;
     color: white;
     padding: 7px;
+    cursor: pointer;
+}
+.card-bottom {
+    font-size: 23px;
 }
