--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
   /* margin: 0;
   padding: 0; */
 }
-body, h1,h2,h3,h4,h5,h6,p,button{
+body {
+  font-family: "Quattrocento Sans", sans-serif;
+}
+body,h1,h2,h3,h4,h5,h6,p,button {
   margin: 0;
   padding: 0;
 }
@@ -13,15 +16,12 @@ button {
   text-decoration: none;
   display: inline-block;
 }
-
 header {
-  /* position: relative; */
   width: 100%;
   height: 10vh;
 }
 .navbar {
-  width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,45 +30,33 @@ header {
 }
 .navbar ul {
   display: flex;
-  text-decoration: none;
   list-style: none;
-  font-size: 18px;
 }
 .navbar ul li {
-  padding: 2px 8px 2px 8px;
-  margin-left: 82px;
-  margin-right: 42px;
+  padding: 21px;
+  margin-left: 22px;
 }
-
+.fa-shopping-cart{
+  content: "\f07a";
+  color: white;
+  padding-right: 15px;
+  font-size: 17px;
+}
 .navbar li:hover {
   background-color: #41b57d;
 }
 .brand-title {
-  font-size: 35px;
-  margin: 2px;
-  font-family: "Quattrocento Sans", sans-serif;
-  color: white;
+  font-size: 34px;
 }
-.search-bar {
+main {
   position: relative;
-}
-.search-input {
-  border-radius: 9%;
-  margin-right: 29px;
-  width: 150%;
-}
-.search-btn {
-  position: relative;
-  background-color: #41b57d;
-  color: #ffffff;
-  border-radius: 9%;
-  left: 2%;
+  width: 100%;
+  height: auto;
 }
 .banner {
   position: relative;
   width: 100%;
-  height: 70vh;
-  /* height: 30%; */
+  height: 311px;
   background-color: #c4c4c4;
 }
 .banner h1 {
@@ -77,48 +65,36 @@ header {
   font-size: 90px;
   top: 16%;
   left: 6%;
-  font-family: "Quattrocento Sans", sans-serif;
 }
 .banner h2 {
   position: absolute;
   color: white;
   font-size: 67px;
-  top: 38%;
+  top: 45%;
   left: 6%;
-  font-family: "Quattrocento Sans", sans-serif;
 }
 .circle-drone-bg {
-  position: relative;
-  height: 91%;
-  top: 5%;
-  width: 30%;
+  position: absolute;
+  height: 89%;
+  top: 4%;
+  width: 33%;
   background-color: rgb(255, 255, 255);
   border-radius: 50%;
-  left: 53%;
+  left: 58%;
 }
-
 .banner .circle-drone-bg img {
   position: absolute;
-  width: 165%;
-  height: 134%;
-  right: -16%;
-  top: -12%;
-}
-
-main {
-  position: relative;
-  width: 100%;
+  width: 166%;
+  height: 138%;
+  right: -19%;
+  top: -9%;
 }
 .categories {
   position: relative;
   width: 100%;
-  height: 102vh;
-  background-color: #4a4a4a;
+  height: 620px;
+  background-color: #6c8b8f;
 }
-/* .categories h1 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 50px;
-} */
 .Drones-cat {
   position: absolute;
   border-radius: 2%;
@@ -128,130 +104,129 @@ main {
   top: 2%;
   left: 2%;
 }
+
 .Drones-cat h3 {
   position: absolute;
-  font-size: 65px;
-  color: #41b57d;
-  font-family: "Quattrocento Sans", sans-serif;
-  top: 34%;
-  right: 47%;
+  font-size: 45px;
+  color: #071435;
+  top: 10%;
+  right: 41%;
 }
+
 .Drones-cat img {
-  width: 56%;
-  margin-top: -7%;
-  margin-left: 36%;
+  position: absolute;
+  width: 63%;
+  top: 13%;
+  left: 13%;
 }
+
 .computers-cat {
   position: absolute;
   border-radius: 2%;
   background-color: #ffffff;
   width: 30%;
-  height: 46vh;
+  height: 45%;
   left: 39%;
   top: 2%;
 }
+
 .computers-cat h3 {
   position: absolute;
-  font-size: 55px;
-  color: #41b57d;
-  font-family: "Quattrocento Sans", sans-serif;
-  top: -15%;
-  right: 24%;
+  font-size: 45px;
+  color: #071435;
+  top: 6%;
+  right: 50%;
 }
+
 .computers-cat img {
-  width: 63%;
-  margin-top: 23%;
-  margin-left: 35%;
+  position: absolute;
+  width: 80%;
+  top: 29%;
+  left: 2%;
 }
+
 .Consoles-cat {
   position: absolute;
   border-radius: 2%;
   background-color: #ffffff;
   width: 67%;
-  height: 47vh;
+  height: 29%;
   left: 2%;
   top: 49%;
 }
+
 .Consoles-cat h3 {
   position: absolute;
-  font-size: 59px;
-  color: #41b57d;
-  font-family: "Quattrocento Sans", sans-serif;
-  top: 17%;
-  right: 48%;
+  font-size: 45px;
+  color: #071435;
+  top: 36%;
+  right: 47%;
 }
+
 .Consoles-cat img {
-  width: 33%;
-  margin-top: -7%;
-  margin-left: 58%;
+  position: absolute;
+  width: 28%;
+  bottom: -15%;
+  left: 71%;
 }
+
 .SmartPhones-cat {
   position: absolute;
   border-radius: 2%;
   background-color: #ffffff;
   width: 28%;
-  height: 95vh;
+  height: 76%;
   left: 70%;
   top: 2%;
 }
+
 .SmartPhones-cat h3 {
   position: absolute;
-  font-size: 50px;
-  color: #41b57d;
-  font-family: "Quattrocento Sans", sans-serif;
-  top: 57%;
-  right: 4%;
+  font-size: 45px;
+  color: #071435;
+  top: 6%;
+  right: 15%;
 }
+
 .SmartPhones-cat img {
-  width: 59%;
-  margin-top: 3%;
-  margin-left: 21%;
+  position: absolute;
+  width: 54%;
+  bottom: 5%;
+  left: 27%;
 }
 footer {
-  position: relative;
-  width: 100%;
-  height: 10vh;
+  height: 30vh;
   background-color: #071435;
-  /* remove over flow hidden  */
-  overflow: hidden;
+  padding: 18px;
 }
-.contact-us {
-  position: absolute;
-  width: 16%;
-  height: 58%;
-  color: #8691A7;
-  top: 18%;
-  padding: 0;
-  right: 81%;
+.contact-us{
+  display: inline-block;
+  color: #8691a7;
   border-right: solid 1px;
+  padding-right: 3%;
 }
-.contact-us h3 {
-  font-size: 25px;
-}
-.contact-us h4{
-  color: #8691A7;
+.contact-us h3{
+  margin-bottom: 3%;
 }
 .follow-us {
-  position: absolute;
-  width: 26%;
-  height: 58%;
-  color: #8691A7;
-  top: 19%;
-  left: 24%;
+  display: inline-block;
+  width: 29%;
+  color: #8691a7;
   padding: -8px;
   border-right: solid 1px;
+  margin-left: 3%;
+}
+.follow-us h4{
+  margin-top: 2px;
+}
 
-}
-.follow-us h3{
-  font-size: 25px;
-}
 .follow-us img {
   width: 12%;
-  padding: 0%;
+  padding: 0%;  
   filter: none;
   margin-right: 6%;
+  margin-top: 3%;
 }
 .follow-us img:hover {
   filter: invert(1);
-
 }
