--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -1,65 +1,76 @@
+.navbar {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  width: 100%;
+  background-color: #071435;
+  color: white;
+  z-index: 1;
+}
 
-main{
-    margin-top: 4vh;
+main {
+  margin-top: 4vh;
 }
-.products{
-    min-height: 56vh;
-    background-color:white;
-    margin: 0% 5% 0% 5%;
+.products {
+  min-height: 56vh;
+  background-color: white;
+  margin: 0% 5% 0% 5%;
 }
-.products h1{
-    display: inline-block;
-    border-bottom: 2px solid black;
-    margin-bottom: 14px;
-    margin-left: 14px;
+.products h1 {
+  display: inline-block;
+  border-bottom: 2px solid black;
+  margin-bottom: 14px;
+  margin-left: 14px;
 }
-.cards-container{
-    display: flex;
-    flex-wrap: wrap;
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 .card {
-    display: inline-block;
-    position: relative;
-    background-color: rgb(182, 182, 182);
-    width: 22%;
-    border: 0.5px solid #888888;
-    border-radius: 8px;
-    overflow: hidden;
-    height: 300px;
-    margin-right: 11px;
-    margin-left: 15px;
-    margin-bottom: 25px;
+  display: inline-block;
+  position: relative;
+  background-color: rgb(182, 182, 182);
+  width: 22%;
+  border: 0.5px solid #888888;
+  border-radius: 8px;
+  overflow: hidden;
+  height: 300px;
+  margin-right: 11px;
+  margin-left: 15px;
+  margin-bottom: 25px;
 }
-.card:hover{
-    box-shadow: 2px 3px 14px gray;
-    transition: 0.5s;
+.card:hover {
+  box-shadow: 2px 3px 14px gray;
+  transition: 0.5s;
 }
-.card .image{
-    width: 100%;
-    height: 140px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
+.card .image {
+  width: 100%;
+  height: 140px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: white;
 }
-.card .details{
-    padding: 6px;
-}
-.card-bottom {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    bottom: 8px;
-}
-.card-bottom button{
-    background-color:#2AB050;
-    border-radius: 2px;
-    color: white;
-    padding: 7px;
-    cursor: pointer;
+.card .details {
+  padding: 6px;
 }
 .card-bottom {
-    font-size: 23px;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  bottom: 8px;
+}
+.card-bottom button {
+  background-color: #2ab050;
+  border-radius: 2px;
+  color: white;
+  padding: 7px;
+  cursor: pointer;
+}
+.card-bottom {
+  font-size: 23px;
 }
