--- a/css/smartphone.css
+++ b/css/smartphone.css
@@ -1,13 +1,13 @@
 .navbar {
   position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: center; */
   height: 10vh;
   width: 100%;
-  background-color: #071435;
+  /* background-color: #071435; */
   color: white;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 main {
