--- a/css/cartexample.css
+++ b/css/cartexample.css
@@ -33,7 +33,7 @@ header {
   height: 10vh;
 }
 
-.navbar {
+ .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -155,9 +155,6 @@ header {
     width: 100%;
     max-width: 350px;
   }
-
-/* another version for checkout */
-
   /* 
   .order-container {
     position: sticky;
@@ -224,7 +221,6 @@ header {
   
 /*  */
 
-/* footer */
 
 footer {
   /* position: absolute; */
@@ -268,8 +264,105 @@ footer {
 
 
 
-/* nav bar and footer */
+/* home-page-responsive */
 
+/* @media only screen and (min-width: 320px) and (max-width: 553px) {
+  .banner .circle-drone-bg img {
+    display: none;
+  }
+  .banner h1 {
+    font-size: 4rem;
+    top: 27%;
+  }
+  .banner h2 {
+    font-size: 3rem;
+    top: 51%;
+  }
+
+  .circle-drone-bg {
+    display: none;
+  }
+}
+
+ @media only screen and (min-width: 553px) and (max-width: 733px) {
+    .banner h1 {
+      font-size: 4rem;
+    }
+    .banner h2 {
+      font-size: 3rem;
+    }
+  } 
+
+ @media only screen and (min-width: 733px) and (max-width: 850px) {
+    .banner h1 {
+      font-size: 5rem;
+    }
+  } 
+
+@media only screen and (min-width: 320px) and (max-width: 730px) {
+  .Drones-cat {
+    position: absolute;
+    border-radius: 2%;
+    background-color: #ffffff;
+    height: 20%;
+    width: 96%;
+    top: 2%;
+    left: 2%;
+    border: 1px solid gray;
+  }
+  .Drones-cat img {
+    display: none;
+  }
+  .Drones-cat h3 {
+    text-align: center;
+  }
+  .computers-cat {
+    width: 96%;
+    height: 22%;
+    left: 2%;
+    top: 24%;
+  }
+  .computers-cat h3 {
+    top: 26%;
+    right: 40%;
+  }
+  .computers-cat img {
+    display: none;
+  }
+  .Consoles-cat img {
+    display: none;
+  }
+  .Consoles-cat {
+    position: absolute;
+    border-radius: 2%;
+    background-color: #ffffff;
+    width: 96%;
+    height: 21%;
+    left: 2%;
+    top: 48%;
+  }
+  .Consoles-cat h3 {
+    top: 28%;
+    right: 28%;
+  }
+
+  .Mobiles-cat {
+    width: 96%;
+    height: 22%;
+    left: 2%;
+    top: 71%;
+  }
+  .Mobiles-cat h3 {
+    text-align: center;
+    top: 30%;
+    right: 25%;
+  }
+  .Mobiles-cat img {
+    display: none;
+  }
+} */
+
+/* nav bar and footer */
 @media only screen and (max-width: 561px) {
   .navbar ul {
     position: absolute;
@@ -325,5 +418,27 @@ footer {
   .navbar ul li {
     padding: 19px;
     margin: 1px 0px 1px 1px;
+  }
+}
+
+/* pages */
+
+@media only screen and (min-width: 600px) and (max-width: 963px) {
+  #cards-container .card {
+    width: 28%;
+    /* background-color: lawngreen !important; */
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 600px) {
+  #cards-container .card {
+    width: 40%;
+    /* background-color: lawngreen !important; */
+  }
+}
+
+@media only screen and (min-width: 0px) and (max-width: 500px) {
+  #cards-container .card {
+    width: 60%;
+    margin-left: 74px;
   }
 }
