--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,88 @@
+* {
+  box-sizing: border-box;
+  /* margin: 0;
+  padding: 0; */
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+body {
+  font-family: "Quattrocento Sans", sans-serif;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+button {
+  margin: 0;
+  padding: 0;
+}
+button {
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+header {
+  width: 100%;
+  height: 6vh;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  background-color: #071435;
+  color: white;
+  z-index: 1;
+}
+.fas.fa-bars {
+  display: none;
+  margin-right: 23px;
+  font-size: 25px;
+  color: white;
+}
+.navbar ul {
+  display: flex;
+  list-style: none;
+  margin: 0px;
+  padding: 0;
+}
+.navbar ul li {
+  padding: 21px;
+  margin-left: 22px;
+}
+.fa-shopping-cart {
+  position: absolute;
+  content: "\f07a";
+  color: white;
+  padding-right: 15px;
+  margin-right: 2px;
+  font-size: 1rem;
+}
+.navbar li:hover {
+  background-color: #41b57d;
+  cursor: pointer;
+}
+.brand-title {
+  font-size: 34px;
+  list-style: none;
+  color: white;
+}
+main {
+  position: relative;
+  margin-top: 4vh;
+  width: 100%;
+  height: auto;
+}
+
 .navbar {
   position: fixed;
   height: 10vh;
@@ -26,9 +111,8 @@
   top: 18px;
   right: -3px;
 }
-main {
-  margin-top: 4vh;
-}
+
+
 .products {
   min-height: 56vh;
   background-color: white;
@@ -89,4 +173,130 @@ main {
 }
 .card-bottom {
   font-size: 23px;
+}
+
+
+/* footer */
+
+
+footer {
+  /* position: absolute; */
+  height: 21vh;
+  background-color: #071435;
+  padding: 18px;
+  top: 147vh;
+}
+
+.contact-us {
+  display: inline-block;
+  color: #8691a7;
+  border-right: solid 1px;
+  padding-right: 3%;
+}
+.contact-us h3 {
+  margin-bottom: 3%;
+}
+.follow-us {
+  display: inline-block;
+  width: 29%;
+  color: #8691a7;
+  padding: -8px;
+  border-right: solid 1px;
+  margin-left: 3%;
+}
+.follow-us h4 {
+  margin-top: 2px;
+}
+
+.follow-us img {
+  width: 12%;
+  padding: 0%;
+  filter: none;
+  margin-right: 6%;
+  margin-top: 3%;
+}
+.follow-us img:hover {
+  filter: invert(1);
+}
+
+
+
+/* responsive: */
+/* pages */
+@media only screen and (min-width: 600px) and (max-width: 963px) {
+  #cards-container .card {
+    width: 28%;
+    /* background-color: lawngreen !important; */
+  }
+}
+@media only screen and (min-width: 500px) and (max-width: 600px) {
+  #cards-container .card {
+    width: 40%;
+    /* background-color: lawngreen !important; */
+  }
+}
+
+@media only screen and (min-width: 0px) and (max-width: 500px) {
+  #cards-container .card {
+    width: 60%;
+    margin-left: 74px;
+  }
+}
+/* nav&footer */
+@media only screen and (max-width: 561px) {
+  .navbar ul {
+    position: absolute;
+    right: 0;
+    top: 51px;
+    padding: 0;
+    margin: 0;
+    background-color: #071435;
+    display: initial;
+  }
+  .navbar ul li {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+  .navbar ul.hide-menu {
+    display: none;
+  }
+  .fa-shopping-cart:before {
+    content: "\f07a";
+    position: absolute;
+    top: 205px;
+    right: 106px;
+  }
+  #itemCounter {
+    display: none;
+  }
+  i.fas.fa-bars {
+    user-select: none;
+    display: block;
+  }
+  .contact-us {
+    display: block;
+    color: #8691a7;
+    padding-right: 3%;
+  }
+  .follow-us {
+    display: block;
+    color: #8691a7;
+    width: initial;
+    padding: -8px;
+    border-right: none;
+    margin-left: 0;
+    margin-top: 14px;
+  }
+  .follow-us img {
+    width: 7%;
+  }
+  footer {
+    height: auto;
+  }
+}
+@media only screen and (min-width: 561px) and (max-width: 728px) {
+  .navbar ul li {
+    padding: 19px;
+    margin: 1px 0px 1px 1px;
+  }
 }
