--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ button {
 
 header {
   width: 100%;
-  height: 6vh;
+  height: 10vh;
 }
 
 .navbar {
@@ -78,6 +78,7 @@ header {
 }
 main {
   position: relative;
+  /* margin-top: 4vh; */
   width: 100%;
   height: auto;
 }
@@ -285,7 +286,174 @@ footer {
   filter: invert(1);
 }
 
+
+
+
+/* after */
+
+/* nav&footer */
+@media only screen and (max-width: 561px) {
+  .navbar ul {
+    position: absolute;
+    right: 0;
+    top: 51px;
+    padding: 0;
+    margin: 0;
+    background-color: #071435;
+    display: initial;
+  }
+  .navbar ul li {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+  .navbar ul.hide-menu {
+    display: none;
+  }
+  .fa-shopping-cart:before {
+    content: "\f07a";
+    position: absolute;
+    top: 278px;
+    right: 106px;
+  }
+  #itemCounter {
+    display: none;
+  }
+  i.fas.fa-bars {
+    user-select: none;
+    display: block;
+  }
+  .contact-us {
+    display: block;
+    color: #8691a7;
+    padding-right: 3%;
+  }
+  .follow-us {
+    display: block;
+    color: #8691a7;
+    width: initial;
+    padding: -8px;
+    border-right: none;
+    margin-left: 0;
+    margin-top: 14px;
+  }
+  .follow-us img {
+    width: 7%;
+  }
+  footer {
+    height: auto;
+  }
+}
+@media only screen and (min-width: 561px) and (max-width: 728px) {
+  .navbar ul li {
+    padding: 19px;
+    margin: 1px 0px 1px 1px;
+  }
+}
+
+
+/* home-page */
+
 @media only screen and (min-width: 320px) and (max-width: 553px) {
+  .banner .circle-drone-bg img {
+    display: none;
+  }
+  .banner h1 {
+    font-size: 4rem;
+    top: 27%;
+  }
+  .banner h2 {
+    font-size: 3rem;
+    top: 51%;
+  }
+
+  .circle-drone-bg {
+    display: none;
+  }
+}
+
+ @media only screen and (min-width: 553px) and (max-width: 733px) {
+    .banner h1 {
+      font-size: 4rem;
+    }
+    .banner h2 {
+      font-size: 3rem;
+    }
+  } 
+
+ @media only screen and (min-width: 733px) and (max-width: 850px) {
+    .banner h1 {
+      font-size: 5rem;
+    }
+  } 
+
+@media only screen and (min-width: 320px) and (max-width: 730px) {
+  .Drones-cat {
+    position: absolute;
+    border-radius: 2%;
+    background-color: #ffffff;
+    height: 20%;
+    width: 96%;
+    top: 2%;
+    left: 2%;
+    border: 1px solid gray;
+  }
+  .Drones-cat img {
+    display: none;
+  }
+  .Drones-cat h3 {
+    text-align: center;
+  }
+  .computers-cat {
+    width: 96%;
+    height: 22%;
+    left: 2%;
+    top: 24%;
+  }
+  .computers-cat h3 {
+    top: 26%;
+    right: 40%;
+  }
+  .computers-cat img {
+    display: none;
+  }
+  .Consoles-cat img {
+    display: none;
+  }
+  .Consoles-cat {
+    position: absolute;
+    border-radius: 2%;
+    background-color: #ffffff;
+    width: 96%;
+    height: 21%;
+    left: 2%;
+    top: 48%;
+  }
+  .Consoles-cat h3 {
+    top: 28%;
+    right: 28%;
+  }
+
+  .Mobiles-cat {
+    width: 96%;
+    height: 22%;
+    left: 2%;
+    top: 71%;
+  }
+  .Mobiles-cat h3 {
+    text-align: center;
+    top: 30%;
+    right: 25%;
+  }
+  .Mobiles-cat img {
+    display: none;
+  }
+}
+
+
+/* before */
+
+ 
+/* @media only screen and (min-width: 320px) and (max-width: 553px) {
   .banner .circle-drone-bg img {
     display: none;
   }
@@ -441,13 +609,12 @@ footer {
 @media only screen and (min-width: 600px) and (max-width: 963px) {
   #cards-container .card {
     width: 28%;
-    /* background-color: lawngreen !important; */
+
   }
 }
 @media only screen and (min-width: 500px) and (max-width: 600px) {
   #cards-container .card {
     width: 40%;
-    /* background-color: lawngreen !important; */
   }
 }
 
@@ -456,4 +623,4 @@ footer {
     width: 60%;
     margin-left: 74px;
   }
-}
+}  */
