--- a/css/cart.css
+++ b/css/cart.css
@@ -77,88 +77,244 @@ header {
 }
 
 /* cart */
-.cart-container {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 500px;
-    background-color: rgb(168, 179, 179);
-    z-index: -1;
+main {
+  width: 100%;
+  height: auto;
+}
+.cart-heading{
+  margin-top: 3%;
+  text-align: center;
+}
+.table-heading {
+  border-collapse: collapse;
+  width: 71%;
+  height: auto;
+  margin-top: 6%;
+  margin-left: 14%;
+  border-bottom: 3px solid #51aa78;
+  background-color: #e6e6e6;
+  text-align: left;
+}
+
+#Price{
+  text-align: end;
+
+}
+#Quantity{
+  text-align: center;
+
+}
+.table {
+  border-collapse: collapse;
+  width: 71%;
+  height: auto;
+  margin-left: 14%;
+  margin-top:1%;
+  border-bottom: 3px solid #51aa78;
+  background-color: #e6e6e6;
+  text-align: left;
+}
+.table,.table-heading,
+td,
+th {
+  padding: 8px;
+}
+
+.item {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: unset;
+  column-gap: 6px;
+}
+
+.item .item-img {
+  display: inline-block;
+  width: 31%;
+  height: 67px;
+  background-image: url(../images/home/SmartPhone.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: white;
+}
+.item .item-description {
+  display: inline-block;
+  margin-bottom: 28px;
+}
+.item-quantity span {
+  margin-right: 6%;
+  margin-left: 6%;
+}
+.item-total {
+  align-items: center;
+}
+.total-order {
+  margin-left: 57%;
+  margin-top: 2%;
+  margin-bottom: 4%;
+  height: auto;
+}
+.total-order td{
+  text-align: left;
+}
+.total-order table {
+  border-top: 2px solid gray;
+  width: 100%;
+  padding: 0%;
+  max-width: 65%;
+  background-color: #ececec;
+}
+.checkout-button {
+  margin-top: 5%;
+  width: 124%;
+  border-radius: 4px;
+  background-color: #51aa78;
+  color: white;
+  text-align: center;
+  font-size: 15px;
+  cursor: pointer;
+  margin-left: 26%;
+}
+
+/* footer */
+
+footer {
+  /* position: absolute; */
+  height: 20vh;
+  background-color: #071435;
+  padding: 18px;
+  top: 147vh;
+}
+
+.contact-us {
+  display: inline-block;
+  color: #8691a7;
+  border-right: solid 1px;
+  padding-right: 3%;
+}
+.contact-us h3 {
+  margin-bottom: 3%;
+}
+.follow-us {
+  display: inline-block;
+  width: 29%;
+  color: #8691a7;
+  padding: -8px;
+  border-right: solid 1px;
+  margin-left: 3%;
+}
+.follow-us h4 {
+  margin-top: 2px;
+}
+
+.follow-us img {
+  width: 12%;
+  padding: 0%;
+  filter: none;
+  margin-right: 6%;
+  margin-top: 3%;
+}
+.follow-us img:hover {
+  filter: invert(1);
+}
+
+@media only screen and (min-width: 320px) and (max-width: 560px) {
+  header,
+  footer {
+    width: 114%;
   }
-  .cart-table {
-    position: absolute;
-    background-color: #e6e6e6;
-    top: 10%;
-    left: 5%;
-    width: 65%;
-    height: auto;
-  }
-  .table ,td,th {
-    border-bottom: 2px solid rgb(153, 153, 153);
-    text-align: left;
-  }
-  .table {
-    position: absolute;
-    border-collapse: collapse;
-    width: 71%;
-    height: auto;
-    top: 10%;
-    left: 16%;
-    border-bottom: 3px solid #51aa78;
-    background-color: #e6e6e6;
-  }
-  
-  th,
-  td {
-    padding: 8px;
-  }
-  
-  .item {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 5px;
-    margin: 0px 0px -2px 0px;
-  }
-  
-  .item .item-img {
-    display: inline-block;
-    width: 31%;
-    height: 67px;
-    background-image: url(../images/home/SmartPhone.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
-  }
-  .item .item-description {
-    display: inline-block;
-    margin-bottom: 28px;
-  }
-  .item-quantity span {
-    margin-right: 6%;
+  .table,.table-heading{
     margin-left: 6%;
-  }
-  .item-total {
-    align-items: center;
-  }
-  
-  .total-order {
-    margin-left: 62%;
-    margin-top: 24%;
-    width: 25%;
-    height: 29%;
-    display: flex;
-    justify-content: flex-end;
-  }
-  .total-order table{
-    border-top: 2px solid gray;
     width: 100%;
-    max-width: 350px;
   }
+  .total-order {
+    margin-left: 36%;
+    margin-top: 2%;
+  }
+  .table,.table-heading,
+  td,
+  th {
+    padding: 4px;
+  }
+}
+@media only screen and (min-width: 560px) {
+  .table,
+  td,
+  th {
+    padding: 4px;
+  }
+  .item .item-img {
+    width: 14%;
+    height: 41px;
+  }
+}
+
+/* nav bar and footer */
+
+@media only screen and (max-width: 561px) {
+  .navbar ul {
+    position: absolute;
+    top: 9%;
+    right: -13%;
+    padding: 0;
+    margin: 0;
+    background-color: #071435;
+    display: initial;
+  }
+  .navbar ul li {
+    margin-top: 10px;
+    margin-left: 0px;
+  }
+  .navbar ul.hide-menu {
+    display: none;
+  }
+  .fa-shopping-cart:before {
+    content: "\f07a";
+    position: absolute;
+    top: 214px;
+    right: 43px;
+  }
+  #itemCounter {
+    display: none;
+    right: 34px;
+    top: 222px;
+  }
+  i.fas.fa-bars {
+    user-select: none;
+    display: block;
+  }
+  .contact-us {
+    display: block;
+    color: #8691a7;
+    padding-right: 3%;
+  }
+  .follow-us {
+    display: block;
+    color: #8691a7;
+    width: initial;
+    padding: -8px;
+    border-right: none;
+    margin-left: 0;
+    margin-top: 14px;
+  }
+  .follow-us img {
+    width: 7%;
+  }
+  footer {
+    height: auto;
+  }
+}
+
+@media only screen and (min-width: 561px) and (max-width: 728px) {
+  .navbar ul li {
+    padding: 19px;
+    margin: 1px 0px 1px 1px;
+  }
+}
 
 /* another version for checkout */
 
-  /* 
+/* 
   .order-container {
     position: sticky;
     margin-left: 77%;
@@ -221,111 +377,5 @@ header {
     font-size: 19px;
     cursor: pointer;
   } */
-  
+
 /*  */
-
-/* footer */
-
-footer {
-  /* position: absolute; */
-  height: 21vh;
-  background-color: #071435;
-  padding: 18px;
-  top: 147vh;
-}
-
-.contact-us {
-  display: inline-block;
-  color: #8691a7;
-  border-right: solid 1px;
-  padding-right: 3%;
-}
-.contact-us h3 {
-  margin-bottom: 3%;
-}
-.follow-us {
-  display: inline-block;
-  width: 29%;
-  color: #8691a7;
-  padding: -8px;
-  border-right: solid 1px;
-  margin-left: 3%;
-}
-.follow-us h4 {
-  margin-top: 2px;
-}
-
-.follow-us img {
-  width: 12%;
-  padding: 0%;
-  filter: none;
-  margin-right: 6%;
-  margin-top: 3%;
-}
-.follow-us img:hover {
-  filter: invert(1);
-}
-
-
-
-/* nav bar and footer */
-
-@media only screen and (max-width: 561px) {
-  .navbar ul {
-    position: absolute;
-    right: 0;
-    top: 51px;
-    padding: 0;
-    margin: 0;
-    background-color: #071435;
-    display: initial;
-  }
-  .navbar ul li {
-    margin-top: 10px;
-    margin-left: 0px;
-  }
-  .navbar ul.hide-menu {
-    display: none;
-  }
-  .fa-shopping-cart:before {
-    content: "\f07a";
-    position: absolute;
-    top: 278px;
-    right: 106px;
-  }
-  #itemCounter {
-    display: none;
-  }
-  i.fas.fa-bars {
-    user-select: none;
-    display: block;
-  }
-  .contact-us {
-    display: block;
-    color: #8691a7;
-    padding-right: 3%;
-  }
-  .follow-us {
-    display: block;
-    color: #8691a7;
-    width: initial;
-    padding: -8px;
-    border-right: none;
-    margin-left: 0;
-    margin-top: 14px;
-  }
-  .follow-us img {
-    width: 7%;
-  }
-  footer {
-    height: auto;
-  }
-}
-
-
-@media only screen and (min-width: 561px) and (max-width: 728px) {
-  .navbar ul li {
-    padding: 19px;
-    margin: 1px 0px 1px 1px;
-  }
-}
