--- a/css/pages.css
+++ b/css/pages.css
@@ -56,8 +56,8 @@ header {
   padding: 0;
 }
 .navbar ul li {
-  padding: 21px;
-  margin-left: 22px;
+  padding: 22px 22px;
+  margin: 0px 6px;
 }
 .fa-shopping-cart {
   position: absolute;
@@ -85,7 +85,7 @@ main {
 
 .navbar {
   position: fixed;
-  height: 10vh;
+  height: 10.5vh;
   width: 100%;
   color: white;
   z-index: 1;
