--- a/css/pages.css
+++ b/css/pages.css
@@ -81,6 +81,7 @@ main {
   margin-top: 4vh;
   width: 100%;
   height: auto;
+  background-color: #e0e0e0;;
 }
 
 .navbar {
@@ -115,7 +116,7 @@ main {
 
 .products {
   min-height: 56vh;
-  background-color: white;
+  background-color: #e0e0e0;
   margin: 0% 5% 0% 5%;
 }
 .products h1 {
@@ -127,13 +128,14 @@ main {
 .cards-container {
   display: flex;
   flex-wrap: wrap;
+  background-color: #e0e0e0;;
 }
 .card {
   display: inline-block;
   position: relative;
-  background-color: rgb(182, 182, 182);
+  background-color: white;
   width: 22%;
-  border: 0.5px solid #888888;
+  /* border: 0.5px solid #888888; */
   border-radius: 8px;
   overflow: hidden;
   height: 300px;
@@ -247,7 +249,7 @@ footer {
   .navbar ul {
     position: absolute;
     right: 0;
-    top: 51px;
+    top: 53px;
     padding: 0;
     margin: 0;
     background-color: #071435;
