--- a/css/cart.css
+++ b/css/cart.css
@@ -171,7 +171,7 @@ th {
 /* footer */
 
 footer {
-  /* position: absolute; */
+  position: absolute;
   height: 20vh;
   background-color: #071435;
   padding: 18px;
@@ -228,6 +228,9 @@ footer {
   th {
     padding: 4px;
   }
+  .item-quantity{
+    font-size: 95%;
+  }
 }
 @media only screen and (min-width: 560px) {
   .table,
@@ -247,7 +250,7 @@ footer {
   .navbar ul {
     position: absolute;
     top: 9%;
-    right: -13%;
+    right: -14%;
     padding: 0;
     margin: 0;
     background-color: #071435;
