--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,22 @@ main {
   font-size: 6rem;
   top: 16%;
   left: 6%;
+  animation: slide-in;
+  animation-timing-function:ease-out;
+  animation-duration: 2S;
+}
+@keyframes slide-in {
+  0%{
+    left: -50%;
+  }
+  25%{}
+  50%{
+
+  }
+  100%{
+    left:6%
+  }
+  
 }
 .banner h2 {
   position: absolute;
@@ -118,8 +134,7 @@ main {
   right: -19%;
   top: -9%;
   animation: Levitation ;
-  animation-duration: 4s;
-  animation-timing-function:linear;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   
 }
