--- a/css/pages.css
+++ b/css/pages.css
@@ -281,15 +281,16 @@ footer {
     display: block;
     color: #8691a7;
     padding-right: 3%;
+    text-align: center;
   }
   .follow-us {
     display: block;
     color: #8691a7;
     width: initial;
     padding: -8px;
-    border-right: none;
     margin-left: 0;
     margin-top: 14px;
+    text-align: center;
   }
   .follow-us img {
     width: 7%;
